Navbar collapse mobile fix

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -337,6 +337,8 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-collapse {
     border-color: rgba(255,255,255,.02);
+    background-color: #fff;
+    text-align: right;
 }
 
 @media(min-width:768px) {
